@@ -1,5 +1,8 @@
 {{$NEXT}}
   - Switch installer to Module::Build::Tiny
+  - Clear events when reactor is reset
+  - Support changing invocation time of active timers in again method, to
+    support keep_alive_timeout added in Mojolicious 8.37
 
 0.009     2015-06-05 20:04:26 EDT
   - For consistency with other reactors, POE can no longer be used to start or
